--- a/agent.ipynb
+++ b/agent.ipynb
@@ -267,6 +267,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "sentiment_prompt = \"\"\" You are a assistant for performing research on market sentiment of a cryto asset.\n",
     "        You are to gauge whether the sentiment is positive, negative or neutral based on news and statements\n",
@@ -289,16 +303,12 @@
     "                    system_prompt = risk_prompt)\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
     "thena_api_prompt = \"\"\" You are an assistant for performing action such as querying user wallet status, trading, swapping and liquidity provision to THENA blockchain ecosystem based on the user's request if any.\n",
     "        Use your tools to complete requests. If you do not have a tool to\n",
     "       complete the request, say so. \"\"\"\n",
     "\n",
     "thena_api_agent = create_tool_agent(llm=llm, tools = [], \n",
     "                    system_prompt = thena_api_prompt)\n",
-    "\n",
-    "\n",
     "\n",
     "\n",
     "xrpl_api_prompt = \"\"\" You are an assistant for performing action such as querying user wallet status, trading, swapping and liquidity provision to Ripple Ledger (XRPL) blockchain ecosystem based on the user's request if any.\n",
@@ -512,6 +522,26 @@
    "metadata": {},
    "source": [
     "## Tests / Examples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_core.messages import HumanMessage\n",
+    "\n",
+    "for s in graph.stream(\n",
+    "    {\n",
+    "        \"messages\": [\n",
+    "            HumanMessage(content=\"Can you perform an interactive analysis for what cryptocurrency I should buy?\")\n",
+    "        ]\n",
+    "    }\n",
+    "):\n",
+    "    if \"__end__\" not in s:\n",
+    "        print(s)\n",
+    "        print(\"----\")"
    ]
   }
  ],
