--- a/agent.ipynb
+++ b/agent.ipynb
@@ -290,7 +290,7 @@
     "        Use your tools to answer questions. If you do not have a tool to\n",
     "        answer the question, say so. \"\"\"\n",
     "\n",
-    "sentiment_agent = create_tool_agent(llm=llm, tools = [retrieve, websearch], \n",
+    "sentiment_agent = create_tool_agent(llm=llm, tools = [retrieve, websearch], # todo: add twitter, governance, news tools\n",
     "              system_prompt = sentiment_prompt)\n",
     "\n",
     "risk_prompt = \"\"\" You are a assistant for performing risk analysis on a crypto asset.\n",
@@ -315,7 +315,7 @@
     "        Use your tools to complete requests. If you do not have a tool to\n",
     "       complete the request, say so. \"\"\"\n",
     "\n",
-    "xrpl_api_agent = create_tool_agent(llm=llm, tools = [], \n",
+    "xrpl_api_agent = create_tool_agent(llm=llm, tools = [], # tools for staking, LPing, swapping etc\n",
     "                    system_prompt = xrpl_api_prompt)"
    ]
   },
