update with ripple tool functions

--- a/agent.ipynb
+++ b/agent.ipynb
@@ -88,7 +88,22 @@
    "source": [
     "# Load and chunk contents of the blog\n",
     "loader = WebBaseLoader(\n",
-    "    web_paths=(\"https://lilianweng.github.io/posts/2023-06-23-agent/\",\n",
+    "    web_paths=(\"https://lilianweng.github.io/posts/2023-06-23-agent/\", # general llm agent blog for the curious\n",
+    "               # help llm make sense of functions\n",
+    "                \"https://xrpl-py.readthedocs.io/en/stable/source/snippets.html\",\n",
+    "                \"https://xrpl-py.readthedocs.io/en/stable/source/xrpl.models.html\",\n",
+    "                \"https://xrpl-py.readthedocs.io/en/stable/source/xrpl.wallet.html\",\n",
+    "                \"https://xrpl-py.readthedocs.io/en/stable/source/xrpl.clients.html\",\n",
+    "                \"https://xrpl-py.readthedocs.io/en/stable/source/xrpl.transaction.html\",\n",
+    "                \"https://xrpl-py.readthedocs.io/en/stable/source/xrpl.ledger.html\",\n",
+    "                \"https://xrpl-py.readthedocs.io/en/stable/source/xrpl.core.addresscodec.html\",\n",
+    "                \"https://xrpl-py.readthedocs.io/en/stable/source/xrpl.utils.html\",\n",
+    "                # context for answering questions related to the XRPL\n",
+    "                \"https://xrpl.org/docs/introduction/what-is-the-xrp-ledger\",\n",
+    "                \"https://xrpl.org/docs/introduction/what-is-xrp\",\n",
+    "                \"https://xrpl.org/docs/introduction/crypto-wallets\",\n",
+    "                \"https://xrpl.org/docs/introduction/transactions-and-requests\",\n",
+    "                # context for answering questions related to the THENA protocol\n",
     "               \"https://docs.thena.fi/thena?ref=bnbchain.ghost.io\",\n",
     "               \"https://docs.thena.fi/thena/the-onboarding\",\n",
     "               \"https://docs.thena.fi/thena/the-spot-dex/swap-guide\",\n",
@@ -263,10 +278,114 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## XRPL DEX Setup for agent tooling"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "from xrpl.clients import JsonRpcClient\n",
+    "from xrpl.clients import WebsocketClient\n",
+    "from xrpl.wallet import generate_faucet_wallet\n",
+    "from xrpl.models.transactions import Payment\n",
+    "from xrpl.utils import xrp_to_drops\n",
+    "from xrpl.transaction import submit_and_wait\n",
+    "from xrpl.models.requests.account_info import AccountInfo\n",
+    "from xrpl.models.transactions import OfferCreate, OfferCancel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_json_rpc_client():\n",
+    "    \"\"\"Create a JSON-RPC client for the XRP Ledger.\"\"\"\n",
+    "    return JsonRpcClient(\"https://s.altnet.rippletest.net:51234/\")\n",
+    "\n",
+    "def get_websocket_client():\n",
+    "    \"\"\"Create a WebSocket client for the XRP Ledger.\"\"\"\n",
+    "    return WebsocketClient(\"wss://s.altnet.rippletest.net:51233\")\n",
+    "\n",
+    "def generate_wallet(client):\n",
+    "    \"\"\"Generate a new wallet using the XRP Ledger.\"\"\"\n",
+    "    return generate_faucet_wallet(client, debug=False)\n",
+    "\n",
+    "def sign_and_submit_payment_txn(client, wallet, destination, amount):\n",
+    "    \"\"\"Sign and submit a payment transaction to the XRP Ledger.\"\"\"\n",
+    "    payment = Payment(\n",
+    "        account=wallet.classic_address,\n",
+    "        amount=xrp_to_drops(amount),\n",
+    "        destination=destination\n",
+    "    )\n",
+    "    response = submit_and_wait(payment, client, wallet)\n",
+    "    return response\n",
+    "\n",
+    "def get_account_info(client, address):\n",
+    "    \"\"\"Get account information from the XRP Ledger.\"\"\"\n",
+    "    info = AccountInfo(\n",
+    "        account=address,\n",
+    "        edger_index=\"validated\",\n",
+    "        strict=True,\n",
+    "    )\n",
+    "    response = client.request(info)\n",
+    "    return response\n",
+    "    \n",
+    "### Trading specific functions\n",
+    "# https://xrpl.org/docs/tutorials/how-tos/use-tokens/trade-in-the-decentralized-exchange#interactive-lookupoffers\n",
+    "# https://xrpl-py.readthedocs.io/en/stable/source/xrpl.models.transactions.html -> look for OfferCreate and OfferCancel\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tutorial code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import asyncio\n",
+    "import pprint\n",
+    "from decimal import Decimal\n",
+    "\n",
+    "from xrpl.asyncio.clients import AsyncWebsocketClient\n",
+    "from xrpl.asyncio.transaction import (\n",
+    "    autofill_and_sign,\n",
+    "    submit_and_wait,\n",
+    ")\n",
+    "from xrpl.asyncio.wallet import generate_faucet_wallet\n",
+    "from xrpl.models.currencies import (\n",
+    "    IssuedCurrency,\n",
+    "    XRP,\n",
+    ")\n",
+    "from xrpl.models.requests import (\n",
+    "    AccountLines,\n",
+    "    AccountOffers,\n",
+    "    BookOffers,\n",
+    ")\n",
+    "from xrpl.models.transactions import OfferCreate\n",
+    "from xrpl.utils import (\n",
+    "    drops_to_xrp,\n",
+    "    get_balance_changes,\n",
+    "    xrp_to_drops,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   },
   {
@@ -274,7 +393,283 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Get credentials from the Testnet Faucet -----------------------------------\n",
+    "# note: https://xrpl.org/docs/concepts/transactions/secure-signing is the recommended way to sign.\n",
+    "# Testnet info can possibly be reset at any time.\n",
+    "# Address: rGNh4AB95PZ1XrE8BSGDpGWE4n5cFsX1ha\n",
+    "# Secret: sEd7mPHej64humD6kPwvxJYGpFX8axn\n",
+    "\n",
+    "async def main():\n",
+    "    async with AsyncWebsocketClient(\"wss://s.altnet.rippletest.net:51233\") as client:\n",
+    "\n",
+    "      print(\"Requesting addresses from the Testnet faucet...\")\n",
+    "      wallet = await generate_faucet_wallet(client, debug=True)\n",
+    "\n",
+    "\n",
+    "    # after exiting the context, the client is closed\n",
+    "\n",
+    "asyncio.run(main())\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define the proposed trade. ------------------------------------------------\n",
+    "      # Technically you don't need to specify the amounts (in the \"value\" field)\n",
+    "      # to look up order books using book_offers, but for this tutorial we reuse\n",
+    "      # these variables to construct the actual Offer later.\n",
+    "      #\n",
+    "      # Note that XRP is represented as drops, whereas any other currency is\n",
+    "      # represented as a decimal value.\n",
+    "      we_want = {\n",
+    "          \"currency\": IssuedCurrency(\n",
+    "              currency=\"TST\",\n",
+    "              issuer=\"rP9jPyP5kyvFRb6ZiRghAGw5u8SGAmU4bd\"\n",
+    "          ),\n",
+    "          \"value\": \"25\",\n",
+    "      }\n",
+    "\n",
+    "      we_spend = {\n",
+    "          \"currency\": XRP(),\n",
+    "          # 25 TST * 10 XRP per TST * 15% financial exchange (FX) cost\n",
+    "          \"value\": xrp_to_drops(25 * 10 * 1.15),\n",
+    "      }\n",
+    "\n",
+    "      # \"Quality\" is defined as TakerPays / TakerGets. The lower the \"quality\"\n",
+    "      # number, the better the proposed exchange rate is for the taker.\n",
+    "      # The quality is rounded to a number of significant digits based on the\n",
+    "      # issuer's TickSize value (or the lesser of the two for token-token trades).\n",
+    "      proposed_quality = Decimal(we_spend[\"value\"]) / Decimal(we_want[\"value\"])\n",
+    "\n",
+    "      # Look up Offers. -----------------------------------------------------------\n",
+    "      # To buy TST, look up Offers where \"TakerGets\" is TST:\n",
+    "      print(\"Requesting orderbook information...\")\n",
+    "      orderbook_info = await client.request(\n",
+    "          BookOffers(\n",
+    "              taker=wallet.address,\n",
+    "              ledger_index=\"current\",\n",
+    "              taker_gets=we_want[\"currency\"],\n",
+    "              taker_pays=we_spend[\"currency\"],\n",
+    "              limit=10,\n",
+    "          )\n",
+    "      )\n",
+    "      print(f\"Orderbook:\\n{pprint.pformat(orderbook_info.result)}\")\n",
+    "\n",
+    "      # Estimate whether a proposed Offer would execute immediately, and...\n",
+    "      # If so, how much of it? (Partial execution is possible)\n",
+    "      # If not, how much liquidity is above it? (How deep in the order book would\n",
+    "      # other Offers have to go before ours would get taken?)\n",
+    "      # Note: These estimates can be thrown off by rounding if the token issuer\n",
+    "      # uses a TickSize setting other than the default (15). In that case, you\n",
+    "      # can increase the TakerGets amount of your final Offer to compensate.\n",
+    "\n",
+    "      offers = orderbook_info.result.get(\"offers\", [])\n",
+    "      want_amt = Decimal(we_want[\"value\"])\n",
+    "      running_total = Decimal(0)\n",
+    "      if len(offers) == 0:\n",
+    "          print(\"No Offers in the matching book. Offer probably won't execute immediately.\")\n",
+    "      else:\n",
+    "          for o in offers:\n",
+    "              if Decimal(o[\"quality\"]) <= proposed_quality:\n",
+    "                  print(f\"Matching Offer found, funded with {o.get('owner_funds')} \"\n",
+    "                        f\"{we_want['currency']}\")\n",
+    "                  running_total += Decimal(o.get(\"owner_funds\", Decimal(0)))\n",
+    "                  if running_total >= want_amt:\n",
+    "                      print(\"Full Offer will probably fill\")\n",
+    "                      break\n",
+    "              else:\n",
+    "                  # Offers are in ascending quality order, so no others after this\n",
+    "                  # will match either\n",
+    "                  print(\"Remaining orders too expensive.\")\n",
+    "                  break\n",
+    "\n",
+    "          print(f\"Total matched: {min(running_total, want_amt)} {we_want['currency']}\")\n",
+    "          if 0 < running_total < want_amt:\n",
+    "              print(f\"Remaining {want_amt - running_total} {we_want['currency']} \"\n",
+    "                    \"would probably be placed on top of the order book.\")\n",
+    "\n",
+    "      if running_total == 0:\n",
+    "          # If part of the Offer was expected to cross, then the rest would be placed\n",
+    "          # at the top of the order book. If none did, then there might be other\n",
+    "          # Offers going the same direction as ours already on the books with an\n",
+    "          # equal or better rate. This code counts how much liquidity is likely to be\n",
+    "          # above ours.\n",
+    "          #\n",
+    "          # Unlike above, this time we check for Offers going the same direction as\n",
+    "          # ours, so TakerGets and TakerPays are reversed from the previous\n",
+    "          # book_offers request.\n",
+    "\n",
+    "          print(\"Requesting second orderbook information...\")\n",
+    "          orderbook2_info = await client.request(\n",
+    "              BookOffers(\n",
+    "                  taker=wallet.address,\n",
+    "                  ledger_index=\"current\",\n",
+    "                  taker_gets=we_spend[\"currency\"],\n",
+    "                  taker_pays=we_want[\"currency\"],\n",
+    "                  limit=10,\n",
+    "              )\n",
+    "          )\n",
+    "          print(f\"Orderbook2:\\n{pprint.pformat(orderbook2_info.result)}\")\n",
+    "\n",
+    "          # Since TakerGets/TakerPays are reversed, the quality is the inverse.\n",
+    "          # You could also calculate this as 1 / proposed_quality.\n",
+    "          offered_quality = Decimal(we_want[\"value\"]) / Decimal(we_spend[\"value\"])\n",
+    "\n",
+    "          tally_currency = we_spend[\"currency\"]\n",
+    "          if isinstance(tally_currency, XRP):\n",
+    "              tally_currency = f\"drops of {tally_currency}\"\n",
+    "\n",
+    "          offers2 = orderbook2_info.result.get(\"offers\", [])\n",
+    "          running_total2 = Decimal(0)\n",
+    "          if len(offers2) == 0:\n",
+    "              print(\"No similar Offers in the book. Ours would be the first.\")\n",
+    "          else:\n",
+    "              for o in offers2:\n",
+    "                  if Decimal(o[\"quality\"]) <= offered_quality:\n",
+    "                      print(f\"Existing offer found, funded with {o.get('owner_funds')} \"\n",
+    "                            f\"{tally_currency}\")\n",
+    "                      running_total2 += Decimal(o.get(\"owner_funds\", Decimal(0)))\n",
+    "                  else:\n",
+    "                      print(\"Remaining orders are below where ours would be placed.\")\n",
+    "                      break\n",
+    "\n",
+    "              print(f\"Our Offer would be placed below at least {running_total2} \"\n",
+    "                    f\"{tally_currency}\")\n",
+    "              if 0 < running_total2 < want_amt:\n",
+    "                  print(f\"Remaining {want_amt - running_total2} {tally_currency} \"\n",
+    "                        \"will probably be placed on top of the order book.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Send OfferCreate transaction ----------------------------------------------\n",
+    "\n",
+    "        # For this tutorial, we already know that TST is pegged to\n",
+    "        # XRP at a rate of approximately 10:1 plus spread, so we use\n",
+    "        # hard-coded TakerGets and TakerPays amounts.\n",
+    "\n",
+    "        tx = OfferCreate(\n",
+    "            account=wallet.address,\n",
+    "            taker_gets=we_spend[\"value\"],\n",
+    "            taker_pays=we_want[\"currency\"].to_amount(we_want[\"value\"]),\n",
+    "        )\n",
+    "\n",
+    "        # Sign and autofill the transaction (ready to submit)\n",
+    "        signed_tx = await autofill_and_sign(tx, client, wallet)\n",
+    "        print(\"Transaction:\", signed_tx)\n",
+    "\n",
+    "        # Submit the transaction and wait for response (validated or rejected)\n",
+    "        print(\"Sending OfferCreate transaction...\")\n",
+    "        result = await submit_and_wait(signed_tx, client)\n",
+    "        if result.is_successful():\n",
+    "            print(f\"Transaction succeeded: \"\n",
+    "                  f\"https://testnet.xrpl.org/transactions/{signed_tx.get_hash()}\")\n",
+    "        else:\n",
+    "            raise Exception(f\"Error sending transaction: {result}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "        # wait for validation 4-7 seconds\n",
+    "\n",
+    "# Check metadata of validated transaction's metadata, instead of tentative txn metadata which can be different from final result ------------------------------------------------------------\n",
+    "\n",
+    "# In case of an OfferCreate transaction, likely results include:\n",
+    "\n",
+    "# Some or all of the Offer may have been filled by matching with existing Offers in the ledger.\n",
+    "# The unmatched remainder, if any, has been placed into the ledger to await new matching Offers.\n",
+    "# Other bookkeeping may have occurred, such as removing expired or unfunded Offers that would have matched.\n",
+    "        \n",
+    "        balance_changes = get_balance_changes(result.result[\"meta\"])\n",
+    "        print(f\"Balance Changes:\\n{pprint.pformat(balance_changes)}\")\n",
+    "\n",
+    "        # For educational purposes the transaction metadata is analyzed manually in the\n",
+    "        # following section. However, there is also a get_order_book_changes(metadata)\n",
+    "        # utility function available in the xrpl library, which is generally the easier\n",
+    "        # and preferred choice for parsing the metadata and computing orderbook changes.\n",
+    "\n",
+    "        # Helper to convert an XRPL amount to a string for display\n",
+    "        def amt_str(amt) -> str:\n",
+    "            if isinstance(amt, str):\n",
+    "                return f\"{drops_to_xrp(amt)} XRP\"\n",
+    "            else:\n",
+    "                return f\"{amt['value']} {amt['currency']}.{amt['issuer']}\"\n",
+    "\n",
+    "        offers_affected = 0\n",
+    "        for affnode in result.result[\"meta\"][\"AffectedNodes\"]:\n",
+    "            if \"ModifiedNode\" in affnode:\n",
+    "                if affnode[\"ModifiedNode\"][\"LedgerEntryType\"] == \"Offer\":\n",
+    "                    # Usually a ModifiedNode of type Offer indicates a previous Offer that\n",
+    "                    # was partially consumed by this one.\n",
+    "                    offers_affected += 1\n",
+    "            elif \"DeletedNode\" in affnode:\n",
+    "                if affnode[\"DeletedNode\"][\"LedgerEntryType\"] == \"Offer\":\n",
+    "                    # The removed Offer may have been fully consumed, or it may have been\n",
+    "                    # found to be expired or unfunded.\n",
+    "                    offers_affected += 1\n",
+    "            elif \"CreatedNode\" in affnode:\n",
+    "                if affnode[\"CreatedNode\"][\"LedgerEntryType\"] == \"RippleState\":\n",
+    "                    print(\"Created a trust line.\")\n",
+    "                elif affnode[\"CreatedNode\"][\"LedgerEntryType\"] == \"Offer\":\n",
+    "                    offer = affnode[\"CreatedNode\"][\"NewFields\"]\n",
+    "                    print(f\"Created an Offer owned by {offer['Account']} with \"\n",
+    "                          f\"TakerGets={amt_str(offer['TakerGets'])} and \"\n",
+    "                          f\"TakerPays={amt_str(offer['TakerPays'])}.\")\n",
+    "\n",
+    "        print(f\"Modified or removed {offers_affected} matching Offer(s)\")\n",
+    "\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "        # Check balances ------------------------------------------------------------\n",
+    "        print(\"Getting address balances as of validated ledger...\")\n",
+    "        balances = await client.request(\n",
+    "            AccountLines(\n",
+    "                account=wallet.address,\n",
+    "                ledger_index=\"validated\",\n",
+    "            )\n",
+    "        )\n",
+    "        pprint.pp(balances.result)\n",
+    "\n",
+    "        # Check Offers --------------------------------------------------------------\n",
+    "        print(f\"Getting outstanding Offers from {wallet.address} \"\n",
+    "              f\"as of validated ledger...\")\n",
+    "        acct_offers = await client.request(\n",
+    "            AccountOffers(\n",
+    "                account=wallet.address,\n",
+    "                ledger_index=\"validated\",\n",
+    "            )\n",
+    "        )\n",
+    "        pprint.pp(acct_offers.result)\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Continuation of agent prompts"
+   ]
   },
   {
    "cell_type": "code",
