--- a/agent.ipynb
+++ b/agent.ipynb
@@ -340,7 +340,10 @@
     "    \n",
     "### Trading specific functions\n",
     "# https://xrpl.org/docs/tutorials/how-tos/use-tokens/trade-in-the-decentralized-exchange#interactive-lookupoffers\n",
-    "# https://xrpl-py.readthedocs.io/en/stable/source/xrpl.models.transactions.html -> look for OfferCreate and OfferCancel\n"
+    "# https://xrpl-py.readthedocs.io/en/stable/source/xrpl.models.transactions.html -> look for OfferCreate and OfferCancel\n",
+    "\n",
+    "\n",
+    "### todo: meta info api for querying exchanges and tokens"
    ]
   },
   {
