commit prev unsaved

--- a/agent.ipynb
+++ b/agent.ipynb
@@ -777,6 +777,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note: We still have a few error outputs to resolve, likely due to formatting issues of content returned to the model by the tools. \n",
+    "This can be ignored for now, as the model is still able to generate responses. If we were to deploy this with a chat interface the issues can be masked.\n",
+    "Also, due to token limits, the model may not be able to generate as comprehensive responses as expected. \n",
+    "This can be resolved by using a larger model or breaking down the query into smaller chunks to be repeated.\n",
+    "\n",
+    "Please scroll all the way down to see generated responses or expand the cell in a new tab to see the full output."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 73,
    "metadata": {},
