--- a/agent.ipynb
+++ b/agent.ipynb
@@ -847,6 +847,16 @@
     "for chunk in graph.stream({\"messages\": messages}, config, stream_mode=\"values\"):\n",
     "    chunk[\"messages\"][-1].pretty_print()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Other questions that can be asked, examples are:\n",
+    "- “Perform a due diligence on token issuers and tell me about the trustworthiness of solocoin”\n",
+    "- “Search the internet on tweets of key opinion leaders about their sentiment on dogecoin”\n",
+    "- “Fetch for me the market activity of Ripple in the past 24 hours” -> “why should I invest, at what price point, and for how long should I hold this position?”\n"
+   ]
   }
  ],
  "metadata": {
