--- a/agent.ipynb
+++ b/agent.ipynb
@@ -852,6 +852,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "From the above, we can see that the supervising agent knows to delegate tasks appropriately as there was risk analysis and fundamental analysis. We can also see that the worker agents are able to use the tools provided to do web search and query ripple ledger for content such as what coins are available on the ledger (in this case SOLOCOIN is one of them, more would have been suggested if there was no output token limit). We can also see that the model knows to perform a second call to specific token (SOLOCOIN) to get more information about it such as its dscription and associated resources."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Other questions that can be asked, examples are:\n",
     "- “Perform a due diligence on token issuers and tell me about the trustworthiness of solocoin”\n",
     "- “Search the internet on tweets of key opinion leaders about their sentiment on dogecoin”\n",
